2020-10-20  Gavin Smith  <gavinsmith0123@gmail.com>

	No automatic menu if node has explicit pointers.

	* tp/Texinfo/Convert/Plaintext.pm (_convert)
	<sectioning commands>:
	Check if extra arguments were given to @node, and if they
	were, do not generate a menu if one was missing.

2020-10-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* util/htmlxref.cnf (tar): Fix.

2020-10-19  Gavin Smith  <gavinsmith0123@gmail.com>

	class="texi-manual"

	* tp/Texinfo/Convert/HTML.pm
	(_convert_xref_commands): Set class="texi-manual" on links
	to other Texinfo manuals.

2020-10-18  Gavin Smith  <gavinsmith0123@gmail.com>

	Manual revisions.

	* doc/texinfo.texi: Docbook -> DocBook throughout.
	(Overview): Reword slightly.
	(Texinfo Document Structure): Remove node self-reference.

2020-10-18  Philipp Klaus Krause <pkk@spth.de>  (tiny change)

	const char *

	* info/filesys.c (filesys_error_string),
	* install-info/install-info.c (ensure_dirfile_exists): Store
	return value of strerror in a const char * variable.

2020-10-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Top Node Example): Merge into parent.

2020-10-18  Gavin Smith  <gavinsmith0123@gmail.com>

	Reorder nodes.

	* doc/texinfo.texi (Texinfo Document Structure, Writing a Node):
	Re-order.

2020-10-18  Gavin Smith  <gavinsmith0123@gmail.com>

	Document SHOW_MENU changes.

	* doc/texinfo.texi
	(Other Customization Variables) <SHOW_MENU>: Explain '1' and
	'sectiontoc' settings.
	(Invoking texi2any): Move '@vindex HEADERS' here.
	(Writing a Node): Take out material about menus and detailed
	menus.
	(Master Menu Parts, Top Node): Move material about menus here.
	Use consistent terminology re "master menu" and "detailed menu".

2020-10-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl: Move a line.

2020-10-18  Gavin Smith  <gavinsmith0123@gmail.com>

	End paragraph for @displaymath.

	* tp/Texinfo/Common.pm (%close_paragraph_commands),